--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -5,6 +5,13 @@
   box-sizing: border-box;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
   margin: 0 auto;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+
+
 }
 
 @media (min-width: 768px) {
