--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,9 @@
 /* header */
 @import url(./blocks/header/header.css);
 @import url(./blocks/header/__logo/header__logo.css);
+@import url(./blocks/header/__auth-menu/header__auth-menu.css);
+@import url(./blocks/header/__auth-name/header__auth-name.css);
+@import url(./blocks/header/__link/header__link.css);
 
 /* main */
 @import url(./blocks/main/main.css);
@@ -51,8 +54,11 @@
 @import url(./blocks/popup/popup.css);
 @import url(./blocks/popup/_opened/popup_opened.css);
 @import url(./blocks/popup/_type/popup_type_zoom.css);
+@import url(./blocks/popup/__icon/popup__icon.css);
 @import url(./blocks/popup/__container/popup__container.css);
+@import url(./blocks/popup/__container/_type/popup__container_type_info-tooltip.css);
 @import url(./blocks/popup/__title/popup__title.css);
+@import url(./blocks/popup/__title/_type/popup__title_type_info-tooltip.css);
 @import url(./blocks/popup/__title/_type/popup__title_type_delete-card.css);
 @import url(./blocks/popup/__zoom-container/popup__zoom-container.css);
 @import url(./blocks/popup/__figure-zoom/popup__figure-zoom.css);
@@ -73,3 +79,12 @@
 @import url(./blocks/form/__submit-btn/form__submit-btn.css);
 @import url(./blocks/form/__submit-btn/_type/form__submit-btn_type_edit-avatar.css);
 @import url(./blocks/form/__submit-btn/_disabled/form__submit-btn_disabled.css);
+
+/*auth */
+@import url(./blocks/auth/auth.css);
+@import url(./blocks/auth/__btn-caption/auth__btn-caption.css);
+@import url(./blocks/auth/__form/auth__form.css);
+@import url(./blocks/auth/__input/auth__input.css);
+@import url(./blocks/auth/__link/auth__link.css);
+@import url(./blocks/auth/__submit-button/auth__submit-btn.css);
+@import url(./blocks/auth/__title/auth__title.css);
